# project-updater

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  ruff.yml  test.yml
src/project_scanner/: main.py
src/project_updater/: __init__.py  __main__.py  logging.py
src/project_updater/cli/: __init__.py  commands.py  log.py
tests/project_scanner/: conftest.py  test_git_scanner.py
