[tool.poetry]
name = "project-updater"
version = "0.1.1"
description = "Git project updater"
authors = ["Ivan Migunov <im@fckg.ru>"]
readme = "README.md"
packages = [
    { include = "project_updater", from = "src" },
    { include = "project_scanner", from = "src" },
]
include = ["LICENSE"]

[tool.poetry.scripts]
project-updater = "project_updater:__main__.main"
project-updater-cli = "project_updater.cli:commands.run"
project-scanner = "project_scanner.main:main"


[tool.poetry.dependencies]
python = "^3.12"
coverage = "^7.4.3"


[tool.poetry.group.lint.dependencies]
ruff = "^0.2.2"
mypy = "^1.8.0"


[tool.poetry.group.test.dependencies]
coverage = "^7.4.3"
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
